fix: increase transform amount
Menu wasn't completely off-screen when toggling after updating it's position in an earlier commit.

--- a/development/css/style.css
+++ b/development/css/style.css
@@ -287,13 +287,13 @@ button {
     }
 
     .mobile-menu.large-toggle {
-        -webkit-transform: translate(280px, -125px);
-        transform: translate(280px, -125px);
+        -webkit-transform: translate(310px, -125px);
+        transform: translate(310px, -125px);
     }
 
     .mobile-menu.large-list {
-        -webkit-transform: translate(280px, 0);
-        transform: translate(280px, 0);
+        -webkit-transform: translate(310px, 0);
+        transform: translate(310px, 0);
     }
 
     .mobile-menu.large-location {
